<resources>
    <string name="app_name">Space Survivor</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="play_button">Play</string>
    <string name="statistics_button">Statistics</string>
    <string name="scoreboard_button">Scores</string>
    <string name="login_button">Login</string>

    <string name="signed_out_text">Not signed in</string>
    <string name="signed_in_text">Signed in as %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_login">Google Login</string>
    <string name="exit">Exit</string>
    <string name="zoom_out">Zoom out</string>
    <string name="logout">Logout</string>
    <string name="statistics">Statistics</string>
</resources>